# hertzrate

./: Cargo.toml  INSTALLER_README.md  LICENSE  README.md  build_installer.bat  installer.iss
.github/workflows/: release.yml
src/: gui.rs  gui_main.rs  main.rs  monitor.rs
