[package]
name = "hertzrate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hertzrate"
path = "src/main.rs"

[[bin]]
name = "hertzrate-gui"
path = "src/gui_main.rs"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging"
] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
eframe = "0.28"
egui = "0.28"
